[project]
name = "datavisualize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "h5py>=3.14.0",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pip>=25.3",
    "protobuf>=6.32.1",
]
